# uber-hacksaw

./: .gitignore  Makefile  Prompt  README.md  bash.exe.stackdump  main.py  pyproject.toml
.github/workflows/: ci.yml
datasets/: README.md  manifest.json
datasets/benign/text/: sample.html  sample.json  sample.xml
datasets/eicar/: eicar_mutated.txt  eicar_truncated.txt
docker/: Dockerfile.mingw
docs/: ARCHITECTURE.md  MILESTONES.md  THREAT_MODEL.md
scripts/: corpus_cli.py
src/uber_hacksaw/: __main__.py
src/uber_hacksaw/cli/: __init__.py  __main__.py
src/uber_hacksaw/core/: engine.py
src/uber_hacksaw/core/rules/yara/: eicar_test_loose_rule.yara  macro_indicators.yara  suspicious_apis.yara
src/uber_hacksaw/detect/: scoring.py  signatures.py
src/uber_hacksaw/io/: collectors.py  fs_utils.py
src/uber_hacksaw/static/: pe.py  type_id.py
tests/: test_cli.py  test_cli_comprehensive.py  test_comprehensive_coverage.py  test_corpus_cli.py  test_eicar.py  test_engine.py  test_file_type_detection.py  test_heuristics.py  test_performance_baseline.py  test_yara_engine.py
tests/tools/: generate_corpus.py
tests/utils/: eicar.py
